--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -73,3 +73,11 @@ nav a{
     display: grid;
     grid-template-columns: auto auto;
 }
+
+
+@media(min-width:900px) {
+    .flowers-block{
+        display:grid;
+        grid-template-columns: auto auto auto auto;
+    }
+}
