--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -74,6 +74,18 @@ nav a{
     grid-template-columns: auto auto;
 }
 
+.cta-button{
+    position: relative;
+    cursor: pointer;
+    font-weight: bold;
+    background-color:tan;
+    color: black;
+    letter-spacing: 2px;
+    border-radius: 10px;
+    padding: 10px;
+    text-decoration: none;
+}
+
 
 @media(min-width:900px) {
     .flowers-block{
