--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,33 @@
+:root {
+    --green: rgb(96, 234, 96);
+    --tan: rgb(210, 180, 140);
+    --red: rgb(255, 0, 0);
+    --black: rgb(0, 0, 0);
+    --purple: #c5bbcd;
+    --arch: #ccc;
+    --darkorange: rgb(255, 140, 0);
+    --grey: #f8f8f8;
+    --white: #fff;
+    --thickred: #f44336;
+    --thickgreen: #04AA6D;
+    --aquamarine: rgb(45, 189, 189);
 
+}
+
+* {
+    padding: 0;
+    box-sizing: border-box;
+}
+
+main {
+    padding: 20px 10px 10px 10px;
+}
+
+
+html,
+body {
+    width: 100%;
+}
 
 .logo {
     display: flex;
@@ -11,29 +40,47 @@
     font-weight: bold;
 }
 
-nav {
-    display: inline-flex;
-    text-align: right;
-    list-style-type: none;
+#menu {
     position: absolute;
+    top: 40px;
     right: 10px;
-    top: 30px;
-}
-
-nav li a{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 25px;
-    list-style-type: none;
-    font-weight: bold;
-}
-nav a{
-    background-color: greenyellow;
-    text-decoration: none;
-    color: black;
-    padding: 10px;
     text-align: right;
 }
 
+.main-menu,
+#hamburger-input {
+    display: none;
+}
+
+#hamburger-input:checked+.main-menu {
+    display: block;
+    text-align: left;
+}
+
+.main-menu {
+    background-color: var(--aquamarine);
+    padding: 10px;
+}
+
+
+nav li {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    list-style-type: none;
+}
+
+nav a {
+    color: var(--black);
+    text-decoration: none;
+}
+
+nav a:hover {
+    color: var(--red);
+}
+.irrelevant {
+    visibility: hidden;
+}
 
 
 /* products page styling
@@ -54,10 +101,11 @@ nav a{
     justify-content: space-between;
 }
 
-.flowers img {
+.flowers img, .featured img, .flora img, .flowerdetails img{
     width: 150px;
     height: 300px;
     border-radius: 20px;
+    
 }
 
 .flowers img:hover{
@@ -78,22 +126,167 @@ nav a{
     position: relative;
     cursor: pointer;
     font-weight: bold;
-    background-color:tan;
-    color: black;
+    background-color: var(--tan);
+    color: var(--black);
     letter-spacing: 2px;
     border-radius: 10px;
     padding: 10px;
     text-decoration: none;
+    margin-top: 20px;
+}
+
+/*Contact page
+------------------*/
+
+#chat {
+    word-break: break-all;
+    word-wrap: break-word;
+    white-space: pre-line;
+    justify-content: left;
+    font-weight: normal;
+    margin-bottom: 15px;
+}
+
+.contact form {
+    display: flex;
+    flex-direction: column;
+    max-width: 500px;
+    gap: 10px;
+}
+
+.input {
+    display: flex;
+    flex-direction: column;
+}
+
+
+.contact-form {
+    margin-top: 20px;
+}
+
+/*About us page
+----------------------*/
+.About{
+    line-height: 1.5;
+}
+
+/*Forms Styling
+-------------------*/
+
+textarea {
+    width: 250px;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid var(--arch);
+    border-radius: 10px;
+    background-color: var(--grey);
+    font-size: 16px;
+    resize: none;
+
+}
+
+input[type=text] {
+    width: 250px;
+    padding: 10px 10px;
+    margin: 6px 0;
+    border-radius: 10px;
+    border: 2px solid var(--arch);
+    box-sizing: border-box;
+}
+
+input[type=number] {
+    width: 250px;
+    padding: 10px 10px;
+    margin: 6px 0;
+    border-radius: 10px;
+    border: 2px solid var(--arch);
+    box-sizing: border-box;
+}
+input[type=submit] {
+    border: none;
+    background-color: var(--darkorange);
+    font-size: 15px;
+    font-weight: bold;
+    padding: 12px 15px;
+    border-radius: 20px;
+}
+
+/*footer styling*/
+.footer-flexbox {
+    display: flex;
+    justify-content: space-around;
+}
+.footer-flexbox a{
+    color: var(--black);
+}
+
+footer {
+    margin-top: auto;
+    background-color: var(--aquamarine);
+    line-height: 1.5;
+    padding-top: 12px;
+}
+
+
+.footer-head {
+    font-size: 20px;
+    font-weight: bold;
 }
 
 
 @media(min-width:900px) {
+
+    header {
+        display: flex;
+        background-color: var(--aquamarine);
+    }
+
+    .logo {
+        width: 242px;
+        height: 58px;
+        left: 53px;
+        top: 70px;
+        font-size: 30px;
+        font-weight: bold;
+    }
+    .logo{
+        width:15%;
+    }
+
+    #menu {
+        position: relative;
+        width: 85%;
+        top: 0;
+    }
+
+    .main-menu {
+        display: flex;
+        height: 100%;
+        justify-content: flex-end;
+        gap: 2em;
+        align-items: center;
+        width: 100%;
+        background-color: transparent;
+        list-style: none;
+        top: 0px;
+    }
+
+    #hamburger-menu {
+        display: none;
+    }
+
     .flowers-block{
         display:grid;
         grid-template-columns: auto auto auto auto;
     }
 
-    .flowers img, .featured img{
+    .flora-container{
+        display: grid;
+        grid-template-columns: auto auto;
+    }
+
+    .flowers img, .featured img, .flora-container img, .flowerdetails img{
         width: 250px;
         height: 450px;
     }
@@ -105,7 +298,7 @@ nav a{
     .featured{
         display: flex;
         flex-direction: row;
-        gap: 40px;;
+        gap: 40px;
     }
 
 }
